# mistral.rs

./: .typos.toml  Cargo.toml  install.sh
.github/workflows/: brew_release.yml  ci.yml  ci_cuda.yaml
docs/: ANYMOE.md  CLI.md  CONFIGURATION.md  DEEPSEEKV2.md  DEEPSEEKV3.md  DEVICE_MAPPING.md  DIA.md  EMBEDDINGGEMMA.md  ENGINE.md  GEMMA3.md  GLM4_MOE_LITE.md  GPT_OSS.md  HTTP.md  IDEFICS2.md  IDEFICS3.md  INSTALLATION.md  ISQ.md  LLaVA.md  MINICPMO_2_6.md  PAGED_ATTENTION.md  PHI3V.md  PHI4MM.md  QUANTS.md  QWEN2VL.md  QWEN3.md  QWEN3_EMBEDDING.md  SMOLLM3.md  SPECULATIVE_DECODING.md  UQFF.md  VLLAMA.md
mistralrs/: Cargo.toml
mistralrs-bench/src/: main.rs
mistralrs-core/: Cargo.toml  build.rs
mistralrs-core/src/: attention.rs  layers.rs  layers_masker.rs  lib.rs  model_loader.rs  model_selected.rs  request.rs  sampler.rs  sequence.rs  toml_selector.rs  video_input.rs
mistralrs-mcp/src/: client.rs
mistralrs-paged-attn/: Cargo.toml  build.rs
mistralrs-pyo3/: mistralrs.pyi
mistralrs-pyo3/src/: lib.rs  util.rs  which.rs
mistralrs-quant/: Cargo.toml  README.md  build.rs
mistralrs-quant/src/: lib.rs
mistralrs/examples/advanced/tools/: main.rs
mistralrs/examples/advanced/xlora/: main.rs
mistralrs/examples/getting_started/multimodal/: main.rs
mistralrs/examples/models/multimodal_multiturn/: main.rs
mistralrs/examples/quantization/uqff_multimodal/: main.rs
mistralrs/src/: anymoe.rs  gguf.rs  gguf_lora_model.rs  gguf_xlora_model.rs  lib.rs  lora_model.rs  messages.rs  model.rs  speculative.rs  text_model.rs  xlora_model.rs
scripts/: generate_uqff_card.py
(+80 files in other folders)
