[package]
name = "mistralrs"
readme = "../README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mistralrs"

[dependencies]
mistralrs-core.workspace = true
mistralrs-macros.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
serde_json.workspace = true
serde.workspace = true
schemars.workspace = true
image.workspace = true
indexmap.workspace = true
either.workspace = true
futures.workspace = true
reqwest.workspace = true
rand.workspace = true
clap.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
# NVIDIA CUDA GPU support
cuda = ["mistralrs-core/cuda"]
# cuDNN acceleration (requires cuda)
cudnn = ["mistralrs-core/cudnn"]
# Apple Metal GPU support (macOS/iOS)
metal = ["mistralrs-core/metal"]
# Flash Attention 2 kernels (requires cuda)
flash-attn = ["cuda", "mistralrs-core/flash-attn"]
# Apple Accelerate framework for BLAS operations
accelerate = ["mistralrs-core/accelerate"]
# Intel MKL acceleration for BLAS operations
mkl = ["mistralrs-core/mkl"]
# Multi-GPU support via NCCL (requires cuda)
nccl = ["mistralrs-core/nccl"]
ring = ["mistralrs-core/ring"]
